# skill-hk-stock-dossier

./: .gitignore  CLAUDE.md  README.md  SKILL.md  pyproject.toml  requirements.txt
src/hk_dossier/: __init__.py  __main__.py  charts.py  client.py  core.py  renderer.py  utils.py
src/hk_dossier/data/: consensus.py  dividends.py  events.py  financials.py  insider.py  market.py  profile.py  research.py  shareholders.py
